# very-english

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  access_policy.py  cors_origins.py  dependencies.py  return_url.py  server.py  upload.py
auth/: __init__.py  context.py  email_verification.py  errors.py  exceptions.py  jwt.py  models.py  passwords.py  users.py  vkid.py
billing/: subscriptions.py  yookassa_client.py  yookassa_webhook_ip.py
broker/: email_worker.py  payment_status_sync_worker.py  subscription_renewal_worker.py  worker.py
core/: exceptions.py  models.py  subscriptions.py  tutors.py  views.py
generation/: __init__.py  __main__.py  cli.py  config.py  fixtures.py  media_storage.py  proxy.py  remote_media.py  seeder.py
infra/: __init__.py  achievements.py  advantages.py  contacts.py  email_verification.py  payments.py  s3_media.py  smtp_email_sender.py  subscriptions.py  tags.py  tutor_filter.py  tutors.py  users.py  views.py
migrations/: env.py
services/: email_verification.py  subscription.py  subscription_service.py  tags.py  tutors.py  views.py
tests/: conftest.py  email_verification_helpers.py  test_achievements_pg.py  test_advantages_pg.py  test_api_auth.py  test_auth.py  test_catalog_media_urls.py  test_contacts_pg.py  test_email_verification.py  test_payment_status_sync.py  test_payments_pg.py  test_s3_media.py  test_subscription_access.py  test_subscription_checkout.py  test_subscription_proration.py  test_subscription_webhook.py  (+10 more)
(+27 files in other folders)
