[project]
name = "very-english-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.0.0"
pytest-xdist = "^3.8.0"
testcontainers = "^4.14.2"
ruff = "^0.15.15"
mypy = "^2.1.0"
pre-commit = "^4.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
files = ["auth", "core", "infra", "main.py"]
exclude = ["migrations/"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true
